--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 apiKey.py
+Useless/emails_for_ml.csv
+Useless/Part1.ipynb
+Useless/Spam_Analysis_and_Detection.ipynb
+Useless/spam_analysis_output.csv
+Useless/spam_analysis_output.txt
+Useless/spam_categories_summary.txt
+Useless/spam_detector_augmented_fixed.ipynb
+Useless/spam_detector_augmented.ipynb
+Useless/test.py
+Useless/Track.ipynb
+Useless/train.ipynb
